--- a/Project/web/index.html
+++ b/Project/web/index.html
@@ -5,11 +5,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Attendance taking - Home</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1 style="text-align: center; color: #627539">Attendance taking</h1>
+        <div id="container" style="text-align: center;">
+            <a href="view">
+                <button>Take attendance by date</button>
+            </a>
+        </div>
     </body>
 </html>
