--- a/Project/web/index.html
+++ b/Project/web/index.html
@@ -13,7 +13,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <h1 style="text-align: center; color: #627539">Attendance taking</h1>
         <div id="container" style="text-align: center;">
             <a href="view">
-                <button>Take attendance by date</button>
+                <button>Take attendance in timetable</button>
+            </a>
+            <a href="take_today">
+                <button>Take today attendance by instructor</button>
             </a>
         </div>
     </body>
