--- a/Project/web/index.html
+++ b/Project/web/index.html
@@ -8,6 +8,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <title>Attendance taking - Home</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/viewing.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h1 style="text-align: center; color: #627539">Attendance taking</h1>
